Updated version in build.gradle